Changelog
=========

3.3.1 (unreleased)
------------------

- Fix double journal entries using quickupload.
  [mathias.leimgruber]

- Test quickupload: Replace mock tests by functional tests.
  [mathias.leimgruber]

- Implement tabbedview for ftw.mail.mail content (Preview / Journal / Info).
  [mathias.leimgruber]

- Added public-trial-column to document tab.
  [lknoepfel]

- Added public_trial index and metadata field.
  [lknoepfel]

- Enforce correct order in inbox-task-tab tests.
  [lknoepfel]

- Added limited-public option for public trial.
  [lknoepfel]

- Refactored some hard to change test data.
  [lgraf]

- Document: Refactor behaviors to be a package with separate modules.
  [lgraf]

3.3 (2014-06-05)
----------------

- Added initial implementation for setting DocProperties when creating
  a document from template.
  [lgraf]

- Fixed zipexport-enable upgrade step to match the new registry entry.
  With ftw.zipexport 1.2.0 the registry name changes which brakes our upgrade step.
  [lknoepfel]

- Added responsible org field on repositoryfolder.
  [lknoepfel]

- Treeportlet: Enable scrolling in the portlet and scroll down to selected item.
  [Julian Infanger]

- Changed source for repository import: from csv to xls.
  [lknoepfel]

- Byline: Removed icon from byline.
  [Julian Infanger]

- Fixed interface in dossiers ConstrainTypeDecider.
  [phgross]

- Updated ftw.zipexport registry entry to multi-value field.
  [lknoepfel]

- Added handling for missing document_type in document view.
  This field is hidden on a customer installation.
  [lknoepfel]

- Dossierdetails PDF: Fixed doubled encoded repository_path.
  [phgross]

- Dossierdetails PDF: Fixed UnicodeEncodeError in responsible getter.
  [phgross]

- Passing search string from live search to advanced search.
  Using SearchableText from the url as default value in advanced search.
  [lknoepfel]

- Styled document from template form.
  [lknoepfel]
