@@ -14,11 +14,13 @@
         <permission value="View" />
     </action>
     <property name="behaviors" purge="False">
+        <element value="plone.app.content.interfaces.INameFromTitle" remove="True" />
         <element value="opengever.trash.trash.ITrashable" />
         <element value="ftw.journal.interfaces.IAnnotationsJournalizable" />
         <element value="plone.app.versioningbehavior.behaviors.IVersionable" />
         <element value="opengever.base.behaviors.sequence.ISequenceNumberBehavior" />
         <element value="opengever.document.behaviors.IBaseDocument" />
         <element value="opengever.mail.mail.IOGMail" />
+        <element value="opengever.document.behaviors.name_from_title.IDocumentNameFromTitle" />
     </property>
 </object>
